--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -12,9 +12,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 
     <!-- CSS desenvolvimento -->
-    <link rel="stylesheet" type="text/css" href="/static/css/admin-home.css">
-    <!-- CSS teste -->
-    <link rel="stylesheet" type="text/css" href="/css/admin-home.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/admin.css">
+    <!-- CSS producao -->
+    <link rel="stylesheet" type="text/css" href="/css/admin.css">
 
 </head>
 <body style="width: 100%;">
@@ -92,14 +92,14 @@
             </div>
         </div>
 
-        <div id="content"></div>
+        <div id="content" class="album py-5 bg-light"></div>
     </main>
 
     <footer></footer>
 
-    <!-- JavaScript Desenvolvimento -->
+    <!-- JavaScript desenvolvimento -->
     <script src="/static/javascript/admin.js" rel="stylesheet" type="text/javascript"></script>
-    <!-- JavaScript Desenvolvimento -->
+    <!-- JavaScript producao -->
     <script src="/javascript/admin.js"></script>
 
     <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
