--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 
     <!-- CSS desenvolvimento -->
-    <link rel="stylesheet" type="text/css" href="/static/css/admin.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/admin.css">
     <!-- CSS producao -->
     <link rel="stylesheet" type="text/css" href="/css/admin.css">
 
@@ -97,9 +97,31 @@
 
     <footer></footer>
 
-    <!-- JavaScript desenvolvimento -->
+    <!-- Popup Delete -->
+    <div class="modal fade" id="popupDelete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel"> </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" ></button>
+                </div>
+                <div class="modal-body form">
+                    Tem certeza que deseja deletar este elemento?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="buttonConfirmDelete">Confirmar</button>
+                </div>
+            </div>
+            </section>
+        </div>
+    </div>
+    <!-- Popup Delete -->
+
+    <!-- JavaScript -->
+        <!-- JavaScript desenvolvimento -->
     <script src="/static/javascript/admin.js" rel="stylesheet" type="text/javascript"></script>
-    <!-- JavaScript producao -->
+        <!-- JavaScript producao -->
     <script src="/javascript/admin.js"></script>
 
     <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
