update view to delete Categoria

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -92,10 +92,15 @@
             </div>
         </div>
 
-        <div id="content" class="album py-5 bg-light"></div>
+        <div id="content" class="album py-5 bg-light">
+
+        </div>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div id="alert-danger" class="fade fixed-bottom alert alert-danger" role="alert" style="height: 30px;width: 200px; margin-left: 88%; margin-bottom: 1%; padding:0px; padding-top: 2px; text-align: center"></div>
+        <div id="alert-success" class="fade fixed-bottom alert alert-success" role="alert" style="height: 30px;width: 200px; margin-left: 88%; margin-bottom: 1%; padding:0px; padding-top: 2px; text-align: center"></div>
+    </footer>
 
     <!-- Popup Delete -->
     <div class="modal fade" id="popupDelete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
