views to insert Categoria

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -107,7 +107,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel"> </h5>
+                    <h5 class="modal-title" id="popupDeleteLabel"> </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" ></button>
                 </div>
                 <div class="modal-body form">
@@ -122,6 +122,30 @@
         </div>
     </div>
     <!-- Popup Delete -->
+
+    <!-- Popup Insert -->
+    <div class="modal fade" id="popupInsertCategoria" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="popupInsertCategoriaLabel">Nova Categoria</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" ></button>
+                </div>
+                <form class="modal-body form-inline" id="formNewCategoria">
+                    <div>
+                        <label for="inputNameNewCategoria" class="sr-only">Nome</label>
+                        <input type="text" class="form-control" id="inputNameNewCategoria" placeholder="Categoria...">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-success" data-bs-dismiss="modal" id="buttonInsertCategoria">Confirmar</button>
+                    </div>
+                </form>
+            </div>
+            </section>
+        </div>
+    </div>
+    <!-- Popup Insert -->
 
     <!-- JavaScript -->
         <!-- JavaScript desenvolvimento -->
